--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 node_modules
+models/cifar10_gradcam.h5
+.angular/cache/angular-webpack/b0e881c1afeca0ef56aaa53417312170f6ee9235/5.pack
+.angular/cache/angular-webpack/b0e881c1afeca0ef56aaa53417312170f6ee9235/4.pack
